[gd_scene load_steps=9 format=3 uid="uid://c1vp4yn7ubm41"]

[ext_resource type="Script" path="res://Scripts/Characters/civilian.gd" id="1_b3qgl"]
[ext_resource type="PackedScene" uid="uid://dfc0wb6eis4ga" path="res://Prefabs/Visuals/attack1_debuff.tscn" id="2_fqw7m"]
[ext_resource type="PackedScene" uid="uid://bu2o4ja3mcb8n" path="res://Prefabs/Visuals/attack2_debuff.tscn" id="3_a60kg"]
[ext_resource type="Script" path="res://detectable.gd" id="4_bmby5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hn37s"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2rt5c"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ftsx7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7m8sb"]

[node name="Civilian" type="CharacterBody3D" groups=["Enemy", "civ"]]
script = ExtResource("1_b3qgl")
attack1_debuff_prefab = ExtResource("2_fqw7m")
attack2_debuff_prefab = ExtResource("3_a60kg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_hn37s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_2rt5c")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(15, 0, 0, 0, 1, 0, 0, 0, 15, 0, 1.93326, 0)
shape = SubResource("CylinderShape3D_ftsx7")

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[node name="SlowTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DotTimer" type="Timer" parent="."]

[node name="DetectionArea3D" type="Area3D" parent="." node_paths=PackedStringArray("mob") groups=["Enemy"]]
script = ExtResource("4_bmby5")
mob = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7m8sb")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="DotTimer" to="." method="_on_dot_timer_timeout"]
